# validity-gadget

./: readme.md
forkoracle/: .gitignore  Cargo.toml  build.rs
forkoracle-go/: go.mod  go.sum  main.go  orchestrator.go  querier.go  send_transaction.go  validate_proposal.go
forkoracle/src/: lib.rs  main.rs  proto.rs  send.rs  send_transaction.rs
forkoracle/src/proto/v1/: msgs.proto
validity-gadget-chain/: go.mod  go.sum  history.txt  readme.md
validity-gadget-chain/app/: app.go  simulation_test.go
validity-gadget-chain/cmd/validity-gadget-chaind/: main.go
validity-gadget-chain/docs/static/: openapi.yml
validity-gadget-chain/proto/validitygadgetchain/: genesis.proto  params.proto  proposal.proto  proposal_extractor.proto  query.proto  tx.proto
validity-gadget-chain/testutil/keeper/: validitygadgetchain.go
validity-gadget-chain/testutil/network/: network.go
validity-gadget-chain/vue/: package-lock.json
validity-gadget-chain/x/validitygadgetchain/: genesis.go  genesis_test.go  handler.go  module.go  module_simulation.go
validity-gadget-chain/x/validitygadgetchain/keeper/: grpc_query.go  grpc_query_params.go  grpc_query_params_test.go  grpc_query_snapshot_proposals.go  keeper.go  keeper_delegate_addresses.go  keeper_delegate_key.go  msg_server.go  msg_server_set_delegate_addresses.go  msg_server_snapshot_proposal.go  msg_server_test.go  params.go  params_test.go  proposal_extractor.go  snapshot_proposal.go
validity-gadget-chain/x/validitygadgetchain/simulation/: set_delegate_addresses.go  snapshot_proposal.go
(+24 files in other folders)
