[package]
name = "forkoracle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forkscanner = { git = "https://github.com/twilight-project/forkscanner" }
dotenv = "0.15"
log = "0.4"
diesel = { version = "1.4", features = ["chrono", "postgres"] }